fixed footer z-index

--- a/src/styles/config/bones.css
+++ b/src/styles/config/bones.css
@@ -57,6 +57,7 @@ body {
     position: relative;
     margin-bottom: 40dvh;
     background: rgba(var(--body-foreground-color), 1);
+    z-index: 2;
 }
 
 .wrap {
